5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_1446.log
== TEST (2019-03-23 22:15:11) 
-- CODE:
a = float(input(" quantidade de litros : "))
b = float(input(" a1/3 "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:17:04) 
-- CODE:
a = float(input(" quantidade de litros : "))
b =  1/3a
print(b)
-- ERROR:
File "XXXX", line 2
    b =  1/3a
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:17:36) 
-- CODE:
a = float(input(" quantidade de litros : "))
b = a / 3
print(b)
-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:20:15) 
-- CODE:
a = float(input(" quantidade de litros : "))
b = a / 3
print(b)
-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 22:20:21) 
-- CODE:
a = float(input(" quantidade de litros : "))
b = a / 3
print(b)
-- EXECUTION TIME:
0.165909
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.3333333333333335
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:21:39) 
-- CODE:
a = float(input(" quantidade de litros : "))
b = a == 1/3
print(round(b, 3))
-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:22:12) 
-- CODE:
a = float(input(" quantidade de litros : "))
b = a/3 
print(round(b, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 22:22:19) 
-- CODE:
a = float(input(" quantidade de litros : "))
b = a/3 
print(round(b, 3))
-- EXECUTION TIME:
0.137326
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
